manifests/browsetor/browsetor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tor-browser-deployment
  namespace: browsetor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tor-browser
  template:
    metadata:
      labels:
        app: tor-browser
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: tor-browser
        image: registry.lan.ccrow.org/domistyle/tor-browser
        ports:
        - containerPort: 5800
        - containerPort: 5900
        volumeMounts:
          - name: private-data-desktop
            mountPath: /app/Browser/Desktop
          - name: private-data-downloads
            mountPath: /app/Browser/Downloads
      volumes:
      - name: private-data-desktop
        nfs:
          server: 10.0.2.8
          path: /volume1/tor-private/desktop
      - name: private-data-downloads
        nfs:
          server: 10.0.2.8
          path: /volume1/tor-private/downloads

---
apiVersion: v1
kind: Service
metadata:
  name: tor-browser-service
  namespace: browsetor
spec:
  type: ClusterIP
  ports:
  - port: 5800
    name: port5800
    targetPort: 5800
  - port: 5900
    name: port5900
    targetPort: 5900
  selector:
    app: tor-browser
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tor-browser-ingress
  namespace: browsetor
  annotations:
    nginx.ingress.kubernetes.io/auth-url: |-
        http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://browsetor.ccrow.org/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    #nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,73.97.37.245/32,136.226.0.0/16,104.167.184.2/32,71.212.35.212/32,71.212.39.100/32,76.22.86.230/32,35.149.177.1/32"
spec:
  rules:
  - host: browsetor.ccrow.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tor-browser-service
            port:
              number: 5800
  tls:
  - hosts:
    - browsetor.ccrow.org
    secretName: tor-browser-tls-secret
